--- a/src/components/contact/styles/ContactInfoItemStyle.css
+++ b/src/components/contact/styles/ContactInfoItemStyle.css
@@ -40,3 +40,11 @@
   .ptexts{
     color: #ffff;
   }
+  .contact-duration {
+    position: absolute;
+    width: 350px;
+    font-size: 12px;
+    padding-top: 20px;
+    text-align: right;
+    color: var(--tertiary-color);
+  }
